--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+body {
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  font-size: 16px;
+}
