--- a/src/app/generator/generator.component.html
+++ b/src/app/generator/generator.component.html
@@ -1,51 +1,55 @@
-<div class="form-group">
-  <label for="file">Choose File</label>
-  <input type="file"
+<div *ngIf="source.length === 0" class="form-container">
+  <input class="" type="file"
          multiple accept="image/*"
          id="photo"
          (change)="handleFileInput($event.target.files)">
 </div>
 
-<!--<div *ngFor="let photo of rawPhotos">-->
-  <!--<img-->
-    <!--[src]="photo"-->
-    <!--alt="usermedia"-->
-    <!--width="200px">-->
-<!--</div>-->
+<div class="drop-zone"
+     (drop)="onDrop($event)"
+     (dragover)="dragover($event)"
+     *ngIf="source.length === 0"
+>
+  <p align="center">Drag images to this Drop Zone ...</p>
+</div>
 
-<!--<div *ngIf="rawPhotos" class="form-group" >-->
-  <!--<div *ngFor="let photo of rawPhotos">-->
-    <!--<img-->
-    <!--[src]="photo"-->
-    <!--alt="usermedia"-->
-    <!--width="200px">-->
-    <!--<input type="checkbox" id="check" name="check" value="checked">-->
-  <!--</div>-->
-  <!--<div>-->
-    <!--<button type="submit" (change)="checkPhotosSubmit($event.target)">Convert</button>-->
-  <!--</div>-->
-<!--</div>-->
+<div *ngIf="source.length > 0" class="form-container">
+  <label>Tags:
+    <input [formControl]="tagsForm">
+  </label>
+  <label>Speed:
+    <input [formControl]="speedForm" type="range" min="1" max="10" value="1" step="1">
+  </label>
 
-<div *ngIf="rawPhotos" class="photo-form">
-  <form [formGroup]="photoForm" >
-    <div *ngFor="let photo of rawPhotos">
-      <div class="form-group">
+  <div class="img-container" [sortablejs]="source">
+    <div class="block" *ngFor="let photo of source; index as i">
+      <div class="img-block" *ngIf="photo.state == 'checked'" [id]="i" >
         <img
-          [src]="photo"
+          [src]="photo.rawUrl"
           alt="usermedia"
-          width="200px">
-        <input type="checkbox" [formControlName]="rawPhotos.indexOf(photo)">
+          width="130px"
+        >
+        <div class="button-del" (click)="delImg(i)">x</div>
       </div>
+
     </div>
-    <button type="submit"
-            class="btn btn-primary"
-            (click)="checkPhotosSubmit()"
-    >Generate</button>
-  </form>
+  </div>
+
+  <button class="btn btn-primary" type="submit"
+          (click)="generateGif()"
+  >Generate</button>
 </div>
 
-<div *ngIf="gif" class="gif-container">
-  <img
-    [src]="gif"
-    alt="usermedia">
+
+<div class="gif-container">
+  <div *ngIf="loader">
+    <img src="../../assets/loader.gif" alt="">
+  </div>
+  <div class="gif-block" *ngIf="gif">
+    <img
+      [src]="gif.url"
+      alt="usermedia">
+    {{gif.tags}}
+  </div>
 </div>
+
